# WarpDWI

./: .gitignore  CMakeLists.txt  README  WarpDWI.cxx  WarpDWI.xml  runWarp0.sh  runWarp1.sh  runWarpExample1.sh  test_matlab_rotations.sh  test_resample_dwi.sh  test_resample_dwi_at_canonical_directions.sh  test_resample_dwi_at_original_directions.sh  test_resample_self_dwi.sh  test_warp_3d.sh  test_warp_3d_image.sh  test_warp_dwi.sh  test_warp_dwi_at_canonical_directions.sh  test_warp_dwi_at_original_directions.sh
Testing/: t1.nrrd  test_resample_dwi_at_canonical_directions.sh  test_resample_dwi_at_original_directions.sh  test_warp_3d_image.sh  test_warp_dwi_at_canonical_directions.sh  test_warp_dwi_at_original_directions.sh
src/: CMakeLists.txt  SHBasis.h  SHFilter.h  SphericalHarmonicPolynomial.h  SphericalHarmonicPolynomial.txx  WarpDWI.cxx  WarpDWI.xml  WarpVolume.cxx  WarpVolume.xml  itkExtractRotationsFilter.h  itkExtractRotationsFilter.txx  matrixlib.h
